# PruebasIntegracion

./: README.md
.postman/: resources.yaml
api-mongo/: .env.example  README.md  main.py  pyproject.toml
api-mongo/config/: compass-connections.json  database.py
api-mongo/controllers/: clients.py  orders.py  products.py
api-mongo/repositories/: clients.py  orders.py  products.py
api-mongo/routers/: clients.py  orders.py  products.py
api-mongo/schemas/: orders.py
postman/collections/MongoDB Web API/.resources/: definition.yaml
postman/collections/MongoDB Web API/Clients/: Get Client by ID.request.yaml  List Clients.request.yaml
postman/collections/MongoDB Web API/Orders/: Create Order.request.yaml  Delete Order.request.yaml  Get Order by ID.request.yaml  List Orders.request.yaml  Update Order.request.yaml
postman/collections/MongoDB Web API/Products/: Get Product by ID.request.yaml  List Products.request.yaml
postman/environments/: MongoDB Local.environment.yaml
